# nix-dotfiles

./: .gitattributes  .gitignore  Makefile  flake.nix  justfile  nixpkgs.nix
flake/: default.nix
home-manager/: bat.nix  chromium.nix  default.nix  direnv.nix  firefox.nix  fish.nix  fonts.nix  fzf.nix  git.nix  helix.nix  home.nix  kitty.nix  lf.nix  mimeapps.nix  neovim.nix  pager.sh  papis.nix  starship.nix  tmux.nix  yazi.nix  zellij.nix  zoxide.nix
home-manager/features/: bat.nix  eza.nix  fish.nix  fzf.nix  helix.nix  kitty.nix  lf.nix  neovim.nix  sioyek.nix  starship.nix  tmux.nix  yazi.nix  zellij.nix
home/app/: sioyek.nix
home/shell/: eza.nix  fzf.nix  git.nix  mimeapps.nix  papis.nix  starship.nix
home/style/: colors.nix  fonts.nix
hosts/: README.org  default.nix
hosts/erasmus/: configuration.nix  hardware-configuration.nix  home.nix
hosts/fennec/: configuration.nix  hardware-configuration.nix  home.nix
modules/: README.md  default.nix
modules/home-manager/: colors.nix  default.nix  fonts.nix  modules.org  nix.nix
modules/neovim/: README.md  flake.nix
modules/nixos/: default.nix  nix.nix
nixos/: configuration.nix  hardware-configuration.nix
overlays/: default.nix  tmux-sessionizer-switch-attatch-if-outside-tmux.patch
patches/: papis-bibtex-import-link.patch  tmux-sessionizer-reverse-layout.patch
pkgs/: default.nix  firefox-gnome-theme.nix
pkgs/helix-live-grep/: default.nix  helix-live-grep.sh
pkgs/live-grep/: default.nix  live-grep.sh
pkgs/zellij-smart-sessionizer/: default.nix
system/: README.org
system/hardware/: opengl.nix
system/wm/: gnome.nix  greetd.nix  sway.nix  swaylock.nix  wayland.nix  x11.nix
templates/: default.nix
templates/go/: flake.nix
templates/jupyter/: flake.nix  pyproject.toml
templates/nodejs/: .gitignore  flake.nix
templates/poetry/: flake.nix  pyproject.toml
templates/poetry/nix_poetry_template/: cli.py
templates/poetry2nix/: .gitignore  flake.nix  pyproject.toml  result
templates/poetry2nix/imgapp/: __init__.py
templates/python-package/: .gitignore  flake.nix  (+1 more)
templates/python-uv/: flake.nix  pyproject.toml
templates/python-uv/src/python_uv/: __init__.py
(+497 files in other folders)
