[tool.poetry]
name = "nix-poetry-template"
version = "0.0.1"
description = "A Nix-flake-based Python development environment with Poetry"
authors = ["Svitax <svitaxiom@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
