[project]
name = "python-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "svitax", email = "svitaxiom@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
python-uv = "python_uv:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
